--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "../build/three.module.js",
+					"three": build/three.module.js",
 					"three/addons/": "./jsm/"
 				}
 			}
