--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				const loader = new GLTFLoader().setPath( 'examples/models/gltf/' );;
 				loader.setKTX2Loader( ktx2Loader );
 				loader.setMeshoptDecoder( MeshoptDecoder );
-				loader.load( 'Parrot.glb', function ( gltf ) {
+				loader.load( 'minimodelexport1(1).glb', function ( gltf ) {
 
 					// coffeemat.glb was produced from the source scene using gltfpack:
 					// gltfpack -i coffeemat/scene.gltf -o coffeemat.glb -cc -tc
